# university_works

./: README.md
Course work 2nd semester/: cw_2sem.c
Course work 2nd semester/cw2_adds/: Kiseleva_Alina_cw.odt  cw2_manual.txt
Course work 3rd semester/: Kiseleva_Alina_cw.odt  cw3  tests.cpp
Course work 3rd semester/src/: CMakeLists.txt  avltree.cpp  avltree.hpp  main.cpp  measureTime.cpp  menu.cpp  menu.hpp
Game_CAT_&_MICE/: CMakeLists.txt
Game_CAT_&_MICE/include/: areaDamageSpell.hpp  directDamageSpell.hpp  enemy.hpp  enemyTower.hpp  field.hpp  game.hpp  gameController.hpp  gameManager.hpp  gui.hpp  hand.hpp  iSpell.hpp  player.hpp  saveManager.hpp  trapSpell.hpp
Game_CAT_&_MICE/src/: areaDamageSpell.cpp  directDamageSpell.cpp  enemy.cpp  enemyTower.cpp  field.cpp  game.cpp  gameManager.cpp  gui.cpp  hand.cpp  main.cpp  player.cpp  saveManager.cpp  trapSpell.cpp
Game_CAT_&_MICE/test/: test.cpp
algorithms/algorithms_and_data_structures/TimSort/: Kiseleva_Alina_lb2.docx
algorithms/algorithms_and_data_structures/TimSort/src/: main.py  tests.py
algorithms/algorithms_and_data_structures/TimSort/src/modules/: graphic.py
algorithms/algorithms_and_data_structures/circular_deque/: Kiseleva_Alina_lb1.docx
algorithms/algorithms_and_data_structures/circular_deque/src/: main.py  tests.py
algorithms/algorithms_and_data_structures/circular_deque/src/modules/: graphics.py
algorithms/algorithms_and_data_structures/rope/: Kiseleva_Alina_lb3.docx
algorithms/algorithms_and_data_structures/rope/src/: main.cpp  tests.cpp
algorithms/algorithms_and_data_structures/rope/src/modules/: CMakeLists.txt
algorithms/algorithms_and_data_structures/rope/src/modules/grafics/: graphic.py  measureTime.cpp  results.txt
algorithms/algorithms_and_data_structures/segment_tree/: Kiseleva_Alina_lb4.docx
algorithms/algorithms_and_data_structures/segment_tree/src/: main.cpp  tests.cpp
algorithms/algorithms_and_data_structures/segment_tree/src/modules/: CMakeLists.txt
algorithms/algorithms_and_data_structures/segment_tree/src/modules/graphics/: graphics.py  measureTime.cpp  results.txt
algorithms/construction_and_analysis_of_algorithms/KMP/: main.cpp  report.doc
algorithms/construction_and_analysis_of_algorithms/TSP/: bsa.cpp  dp.cpp  generateMatrix.cpp  report.doc
algorithms/construction_and_analysis_of_algorithms/aho_korasik/: main.cpp  report.doc
algorithms/construction_and_analysis_of_algorithms/backtracking/: main.cpp  report.doc
algorithms/construction_and_analysis_of_algorithms/levenshtain_distance/: main.cpp  report.doc
classes/: one_way_linked_list.py
numpy_practice/: numpy_practice.py
pillow_practice/: pillow_practice.py
